--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,14 @@ spring:
   application:
     name: distancelearning-service-registry
 
+distancelearning:
+  serviceRegistry:
+    username: admin
+    password: 'admin'
+
 eureka:
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: 'http://${distancelearning.serviceRegistry.username}:${distancelearning.serviceRegistry.password}@localhost:8761/eureka'
